# renderer3d

./: CMakeLists.txt  README.md  setup.sh
examples/: naruto_example.mkv
src/: CMakeLists.txt  base_application.cpp  base_application.h  camera.cpp  camera.h  image.cpp  image.h  object3d.cpp  object3d.h  object_reader.cpp  object_reader.h  rasterizer.cpp  rasterizer.h  renderer.cpp  renderer.h  screen.cpp  screen.h  space.cpp  space.h
src/primitives/: CMakeLists.txt  edge.cpp  edge.h  matrix.h  pivot.cpp  pivot.h  point.cpp  point.h  vertex.cpp  vertex.h
test/: test_cube.cpp  test_interpolation.cpp  test_naruto.cpp  test_teapot.cpp  test_triangles.cpp
